[gd_scene load_steps=2 format=3 uid="uid://d3n6eikkwaqw0"]

[ext_resource type="Script" path="res://addons/quiver.beat_em_up/custom_inspectors/create_mirrored_animation/create_mirrored_animation_button.gd" id="1_rc8ik"]

[node name="CreateMirrorAnimation" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_rc8ik")

[node name="Button" type="Button" parent="."]
offset_right = 1920.0
offset_bottom = 31.0
text = "Create Mirrored Animation"

[node name="NameLine" type="HBoxContainer" parent="."]
offset_top = 35.0
offset_right = 1920.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="NameLine"]
offset_top = 2.0
offset_right = 958.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "New Animation Name"
clip_text = true

[node name="LineEdit" type="LineEdit" parent="NameLine"]
offset_left = 962.0
offset_right = 1920.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="OverwriteLine" type="HBoxContainer" parent="."]
offset_top = 70.0
offset_right = 1920.0
offset_bottom = 101.0

[node name="Label" type="Label" parent="OverwriteLine"]
offset_top = 2.0
offset_right = 1810.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "If Mirror Animation Exists"
clip_text = true

[node name="CheckBox" type="CheckBox" parent="OverwriteLine"]
offset_left = 1814.0
offset_right = 1920.0
offset_bottom = 31.0
button_pressed = true
text = "Overwrite"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Finished!"
size = Vector2i(600, 400)
min_size = Vector2i(600, 400)
dialog_text = "Conversion Results:"
dialog_autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="NameLine/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="toggled" from="OverwriteLine/CheckBox" to="." method="_on_check_box_toggled"]
